# homework_13.2-web-

./: README.md  pyproject.toml  requirements.txt
hw_project/hw_project/: settings.py  urls.py
hw_project/quotes/migrations/: 0001_initial.py
hw_project/quotes/templates/quotes/: base.html  index.html
hw_project/quotes/templatetags/: extract.py
hw_project/users/: urls.py  views.py
hw_project/users/templates/users/: login.html  logout.html
hw_project/utils/: add_quotes_to_mongo.py  migration.py
