[tool.poetry]
name = "homework-13-2-web"
version = "0.1.0"
description = ""
authors = ["SashaKuspys <134163412+SashaKuspys@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "homework_13"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
pymongo = "^4.6.1"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
